--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,34 @@
 stages:
   - build
 
-build:
+build_branches:
   image: maven:3.5.2-jdk-8-alpine
   stage: build
+  before_script:
+    - docker info
   script:
     # Parameter -B is "non-interactive"
     - mvn clean dependency:tree compile -B -X
+
+  artifacts:
+    expire_in: 1 week
+    paths:
+      /builds/geri-m/directory2mavenrepo/target/*.jar
+  only:
+    - branches
+  except:
+    - master
+
+build_master:
+  image: maven:3.5.2-jdk-8-alpine
+  stage: build
+  before_script:
+    - docker info
+  script:
+    # Parameter -B is "non-interactive"
+    - mvn clean dependency:tree compile -B -X
+  artifacts:
+    paths:
+      /builds/geri-m/directory2mavenrepo/target/*.jar
+  only:
+    - master
