--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build_branches:
   stage: build
   script:
   # Parameter -B is "non-interactive"
-  - mvn clean dependency:tree compile -B -X
+  - mvn clean dependency:tree package -B -X
 
   artifacts:
     expire_in: 1 week
@@ -22,7 +22,7 @@ build_master:
   stage: build
   script:
   # Parameter -B is "non-interactive"
-  - mvn clean dependency:tree compile -B -X
+  - mvn clean dependency:tree package -B -X
   artifacts:
     paths:
     - target/*.jar
