--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,10 @@
 
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.shade.plugin.version>3.1.1</maven.shade.plugin.version>
     <java.version>1.8</java.version>
-
     <log4j.version>2.8.2</log4j.version>
     <jul-to-slf4j.version>1.7.25</jul-to-slf4j.version>
-
   </properties>
 
 
@@ -70,6 +69,33 @@
 
   <build>
     <finalName>d2m2</finalName>
+
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>${maven.shade.plugin.version}</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>at.madlmayr.utils.d2m2.Importer</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+
+      </plugin>
+    </plugins>
+
+
   </build>
 
 </project>
